--- a/api/src/main/resources/db/changelog/data/02-genre.yaml
+++ b/api/src/main/resources/db/changelog/data/02-genre.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'a4dcbf78-2f6b-4e26-bf92-576d3b81f067'
               - column:
                   name: name
@@ -18,7 +18,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: '5e6f7d8a-4b9c-42d3-a8e4-cb6f7a9b0d2e'
               - column:
                   name: name
@@ -28,7 +28,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'c8ef8a14-99b4-4d7f-9a09-7a8b0f5a0e05'
               - column:
                   name: name
@@ -38,7 +38,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'd5f9e2a6-2e6d-4a11-bb08-0e1a3d4e5c32'
               - column:
                   name: name
@@ -48,7 +48,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'e0b74d6b-82d2-4a4a-9bbf-2a7dbe2e5f7c'
               - column:
                   name: name
@@ -58,7 +58,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'f3e2c5a1-d3c4-4d5e-a9a4-89e4b7d5c9d0'
               - column:
                   name: name
@@ -68,7 +68,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'b2e8a4f9-8c7d-4c87-95c5-0a9b2c4a3e19'
               - column:
                   name: name
@@ -78,7 +78,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'c9e0b6f3-a9b5-40e3-b1ef-1a7b2c8a7e44'
               - column:
                   name: name
@@ -88,7 +88,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'd4f6a5e4-2b7d-48a7-896f-8c6b2f0e2e88'
               - column:
                   name: name
@@ -98,7 +98,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'e1a7c9d2-5e8d-4a9f-9b7c-3f6a7c8e9d9f'
               - column:
                   name: name
@@ -108,7 +108,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'f4e0d6f8-7b9d-4c4f-8b6a-5c8e3f7d2e0c'
               - column:
                   name: name
@@ -118,7 +118,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'c9a1b3d4-8e5a-4c9e-a0f6-3b7c6e9d5f8b'
               - column:
                   name: name
@@ -128,7 +128,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'd5e9a3c1-4f6e-4c4f-b8d8-8f5a7b9e1d22'
               - column:
                   name: name
@@ -138,7 +138,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'e4f8b5a6-3b9d-4a8b-a8b1-2c7e5d8f9e0a'
               - column:
                   name: name
@@ -148,7 +148,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'f6a9b0e5-2c7d-4a3d-bb5e-8e9d3f5c7e6f'
               - column:
                   name: name
@@ -158,7 +158,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'c8d5a7f3-1b9e-4e6f-a5b7-8e2c9f7a1d6a'
               - column:
                   name: name
@@ -168,7 +168,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'd5c6b8f7-2d4a-4c1a-a1b8-3e9d6f0e7c8b'
               - column:
                   name: name
@@ -178,7 +178,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'e4f8c1d7-6b5a-4d1e-8c9a-7d6e2b3f4a0b'
               - column:
                   name: name
@@ -188,7 +188,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'f7a1d8b9-4e6a-4c3d-8b9e-2c5d7e8f9b0a'
               - column:
                   name: name
@@ -198,7 +198,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'a3d8e6f7-1b9e-4d2a-8a6b-7c5e9d1f0c9d'
               - column:
                   name: name
@@ -208,7 +208,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'b2e9c5d7-4a6b-4c3f-9e8a-5f0c7d8e9b2a'
               - column:
                   name: name
@@ -218,7 +218,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'c4d8e2b9-7a6e-4d1f-9b3c-8f2a7d6e9c5b'
               - column:
                   name: name
@@ -228,7 +228,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   value: 'd8a9c3e2-4b6f-4c7a-8d1e-5f0b7c8e9d6a'
               - column:
                   name: name
