--- a/api/src/main/resources/db/changelog/data/04-director.yaml
+++ b/api/src/main/resources/db/changelog/data/04-director.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'c56a4180-65aa-42ec-a945-5fd21dec0538'
               - column:
                   name: name
@@ -24,7 +24,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: '7c8e3f8d-fb53-42ef-95b9-439b0917b30f'
               - column:
                   name: name
@@ -40,7 +40,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'f7c9a0d7-52fa-4f1e-8f73-28f7d8a6b2e1'
               - column:
                   name: name
@@ -56,7 +56,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'd4a2c5b3-9f7c-4d32-a0df-7a39e4a2f6b3'
               - column:
                   name: name
@@ -73,7 +73,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'a3f5d1e2-8b4a-4e6a-9c45-84c2f3b2d3e4'
               - column:
                   name: name
@@ -89,7 +89,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'b2e8c5f9-6d7e-4e8f-9c2d-3f6e7b5d8e9f'
               - column:
                   name: name
@@ -105,7 +105,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'e1a6d9b3-7c5e-4a3f-8b7d-4c5e8f2a7d6c'
               - column:
                   name: name
@@ -121,7 +121,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'f1a5b6c7-8d9e-4f10-9a11-b1c3d4e5f6a7'
               - column:
                   name: name
@@ -137,7 +137,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'd7e9f8b4-5c2d-4e3f-9b5e-2a1f4b6c7d8e'
               - column:
                   name: name
@@ -153,7 +153,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'e8f9c1d2-3b4f-4a5e-8c7d-9b2d4f6g7h8i'
               - column:
                   name: name
@@ -169,7 +169,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'g9h8i7j6-k5l4-3m2n-1o0p-9q8r7s6t5u4v'
               - column:
                   name: name
@@ -185,7 +185,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'w3x2y1z0-a9b8-c7d6-e5f4-g3h2i1j0k9l8'
               - column:
                   name: name
@@ -202,7 +202,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6'
               - column:
                   name: name
@@ -218,7 +218,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'e7f8g9h0-i1j2-k3l4-m5n6-o7p8q9r0s1t2'
               - column:
                   name: name
@@ -234,7 +234,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'u1v2w3x4-y5z6-a7b8-c9d0-e1f2g3h4i5j6'
               - column:
                   name: name
@@ -250,7 +250,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'k9l8m7n6-o5p4-q3r2-s1t0-u9v8w7x6y5z4'
               - column:
                   name: name
@@ -266,7 +266,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'f4g5h6i7-j8k9-l0m1-n2o3-p4q5r6s7t8u9'
               - column:
                   name: name
@@ -282,7 +282,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'a2b3c4d5-e6f7-g8h9-i0j1-k2l3m4n5o6p7'
               - column:
                   name: name
@@ -298,7 +298,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'b6c7d8e9-f0g1-h2i3-j4k5-l6m7n8o9p0q1'
               - column:
                   name: name
@@ -314,7 +314,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'o9p8q7r6-s5t4-u3v2-w1x0-y9z8a7b6c5d4'
               - column:
                   name: name
@@ -330,7 +330,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'd3e4f5g6-h7i8-j9k0-l1m2-n3o4p5q6r7s8'
               - column:
                   name: name
@@ -346,7 +346,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 't7u8v9w0-x1y2-z3a4-b5c6-d7e8f9g0h1i2'
               - column:
                   name: name
@@ -362,7 +362,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'z1x2c3v4-b5n6-m7l8-k9j0-h1g2f3d4s5a6'
               - column:
                   name: name
@@ -378,7 +378,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'r6s5d4f3-g2h1-j0k9-l8m7-n6o5p4q3r2t1'
               - column:
                   name: name
@@ -394,7 +394,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'y7u8i9o0-p1q2-w3e4-r5t6-y7u8i9o0p1a2'
               - column:
                   name: name
@@ -410,7 +410,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'v3b2n1m4-k5j6-l7h8-g9f0-d1s2a3q4w5e6'
               - column:
                   name: name
@@ -426,7 +426,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'j9k8l7m6-n5b4-v3c2-x1z0-w2y3u4i5o6p7'
               - column:
                   name: name
@@ -442,7 +442,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'm1n2b3v4-c5x6-z7a8-s9d0-f1g2h3j4k5l6'
               - column:
                   name: name
@@ -458,7 +458,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'e5d4c3b2-a1f2-g3h4-i5j6-k7l8m9n0o1p2'
               - column:
                   name: name
@@ -474,7 +474,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'r9s8t7u6-v5w4-x3y2-z1a0-b9c8d7e6f5g4'
               - column:
                   name: name
@@ -490,7 +490,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'q1w2e3r4-t5y6-u7i8-o9p0-z1x2c3v4b5n6'
               - column:
                   name: name
@@ -506,7 +506,7 @@ databaseChangeLog:
             tableName: director
             columns:
               - column:
-                  name: director_id
+                  name: id
                   value: 'l7k6j5h4-g3f2-d1s0-a9p8-o7i6u5y4t3r2'
               - column:
                   name: name
