--- a/api/src/main/resources/db/changelog/tables/movie.yaml
+++ b/api/src/main/resources/db/changelog/tables/movie.yaml
@@ -7,7 +7,7 @@ databaseChangeLog:
             tableName: movie
             columns:
               - column:
-                  name: movie_id
+                  name: id
                   type: varchar(255)
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
