--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -16,21 +16,9 @@ services:
     networks:
       - spring-net
 
-  keycloak:
-    image: keycloak/keycloak:25.0.2
-    container_name: keycloak
-    ports:
-      - "8090:8080"
-    env_file:
-      - .env
-    networks:
-      - spring-net
-    command:
-      - "start-dev"
-
-  moviemanager:
-    image: moviemanager
-    container_name: moviemanager
+  moviehub:
+    image: moviehub
+    container_name: moviehub
     build:
       context: .
     develop:
@@ -44,8 +32,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      keycloak:
-        condition: service_started
     ports:
       - "8088:8080"
     networks:
