--- a/api/pom.xml
+++ b/api/pom.xml
@@ -47,8 +47,9 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+			<groupId>com.okta.spring</groupId>
+			<artifactId>okta-spring-boot-starter</artifactId>
+			<version>3.0.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
