--- a/api/src/main/resources/db/changelog/data/03-gender.yaml
+++ b/api/src/main/resources/db/changelog/data/03-gender.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             tableName: gender
             columns:
               - column:
-                  name: gender_id
+                  name: id
                   value: '54ebec15-3b78-4e27-a52c-fa80b222f86d'
               - column:
                   name: name
@@ -18,7 +18,7 @@ databaseChangeLog:
             tableName: gender
             columns:
               - column:
-                  name: gender_id
+                  name: id
                   value: '1d9f5c1c-40ec-4c42-aabf-41e5f7f1d999'
               - column:
                   name: name
@@ -28,7 +28,7 @@ databaseChangeLog:
             tableName: gender
             columns:
               - column:
-                  name: gender_id
+                  name: id
                   value: '2f9b3c4d-4f12-4a5b-a4d8-c5b7a8d2e728'
               - column:
                   name: name
@@ -38,7 +38,7 @@ databaseChangeLog:
             tableName: gender
             columns:
               - column:
-                  name: gender_id
+                  name: id
                   value: '163ced04-ef03-4206-a8bf-ece306ea8d0b'
               - column:
                   name: name
