--- a/api/src/main/resources/db/changelog/data/05-actor.yaml
+++ b/api/src/main/resources/db/changelog/data/05-actor.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'cba1a8f9-ef1b-4e6c-9f92-cf4532b3a9a4'
               - column:
                   name: name
@@ -24,7 +24,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'b7a5f35b-f3a4-44c8-913f-6b94a842ef02'
               - column:
                   name: name
@@ -40,7 +40,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '7a5f9c4e-2b8e-4d5b-91c2-d6d8a4e9f2c7'
               - column:
                   name: name
@@ -56,7 +56,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '4e6d7f8a-1b5c-4e4d-b4c7-8b7f1c4a9a9d'
               - column:
                   name: name
@@ -73,7 +73,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '4e9fddde-0657-4a2d-8e16-58b1a98e27c4'
               - column:
                   name: name
@@ -89,7 +89,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'c258ba5b-5a3d-4f26-8c87-8e5c0b58b75a'
               - column:
                   name: name
@@ -105,7 +105,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '3e708ba5-e6c2-4d58-bd52-0975c2f08c81'
               - column:
                   name: name
@@ -121,7 +121,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd83751a9-7169-49b5-ad7e-2a226ddbe451'
               - column:
                   name: name
@@ -138,7 +138,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '463f4f94-adf3-4cfe-9f2f-634e06b58c13'
               - column:
                   name: name
@@ -155,7 +155,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '8ff49121-cc35-414d-b57f-0f965766c375'
               - column:
                   name: name
@@ -172,7 +172,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'dcf93df0-707d-4ef3-a226-eeef6f185ebd'
               - column:
                   name: name
@@ -189,7 +189,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '0b356559-d9d4-42a4-ae44-ceae2632d8d2'
               - column:
                   name: name
@@ -208,7 +208,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd9a675aa-d6c7-4066-9fe5-48bfcc9b348a'
               - column:
                   name: name
@@ -228,7 +228,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd3310c75-6871-43e7-9e93-20e0dbfc2cdb'
               - column:
                   name: name
@@ -245,7 +245,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'ceb3e7d4-bc0a-4e90-8e9d-b415be9e1265'
               - column:
                   name: name
@@ -262,7 +262,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'a7b94617-5576-4dca-b3d6-80e5444450d8'
               - column:
                   name: name
@@ -279,7 +279,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd3e5f7g8-h9i0-j1k2-l3m4-n5o6p7q8r9t0'
               - column:
                   name: name
@@ -295,7 +295,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'a5b6c7d8-e9f0-g1h2-i3j4-k5l6m7n8o9p0'
               - column:
                   name: name
@@ -311,7 +311,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd6c4e52a-d456-4f84-8a4b-d3a34a9a6b9e'
               - column:
                   name: name
@@ -330,7 +330,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'a9c6e37b-4a8e-4db4-b7f4-0b3b7a6d1b8a'
               - column:
                   name: name
@@ -347,7 +347,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '010c846a-6ec8-4512-b071-6a9741ef3838'
               - column:
                   name: name
@@ -363,7 +363,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd6295b47-b643-4074-b67d-947afd8a4268'
               - column:
                   name: name
@@ -380,7 +380,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd8e7f6g5-h4i3-j2k1-l0m9-n8o7p6q5r4s3'
               - column:
                   name: name
@@ -396,7 +396,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'c7d8e9f0-g1h2-i3j4-k5l6-m7n8o9p0q1r2'
               - column:
                   name: name
@@ -412,7 +412,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'b1c2d3e4-5f6g-7h8i-9j0k-l1m2n3o4p5q6'
               - column:
                   name: name
@@ -429,7 +429,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'a1b2c3d4-5e6f-7g8h-9i0j-k1l2m3n4o5p6'
               - column:
                   name: name
@@ -446,7 +446,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'c1d2e3f4-5g6h-7i8j-9k0l-m1n2o3p4q5r6'
               - column:
                   name: name
@@ -463,7 +463,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd1e2f3g4-5h6i-7j8k-9l0m-n1o2p3q4r5s'
               - column:
                   name: name
@@ -480,7 +480,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd92323d2-9c80-4f92-b7a1-16744a19cfd5'
               - column:
                   name: name
@@ -497,7 +497,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'c1d2e3f4-5g6h-7i8j-9k0l-m1n2o3p4q5r'
               - column:
                   name: name
@@ -517,7 +517,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd2e3f4g5-6h7i-8j9k-0l1m-n2o3p4q5r6s'
               - column:
                   name: name
@@ -534,7 +534,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '055f2de0-4154-47ba-a405-f1fa3740b47e'
               - column:
                   name: name
@@ -551,7 +551,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '9afd6240-fd74-4aa9-8a62-c867c0ff527a'
               - column:
                   name: name
@@ -567,7 +567,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '1c3055d4-53f3-4f32-acfe-855707e716e9'
               - column:
                   name: name
@@ -584,7 +584,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '04802317-6e53-483f-8c34-40bbd9d1b666'
               - column:
                   name: name
@@ -600,7 +600,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '848d0d10-0955-45f8-a874-1f26ab4c2a77'
               - column:
                   name: name
@@ -617,7 +617,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '47ef5133-166a-40c5-b1a0-e7bc2b8480c1'
               - column:
                   name: name
@@ -634,7 +634,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'a1b2c3d4-e5f6-7g8h-9i0j-k1l2m3n4o5p6'
               - column:
                   name: name
@@ -651,7 +651,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'x8y7z6w5-v4u3-t2s1-r0q9-p8o7n6m5l4k3'
               - column:
                   name: name
@@ -667,7 +667,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'e2f3g4h5-i6j7-k8l9-m0n1-o2p3q4r5s6t7'
               - column:
                   name: name
@@ -684,7 +684,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '831e7d5e-9195-42ad-90bf-6f40a20d7e2e'
               - column:
                   name: name
@@ -701,7 +701,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '5661f2f5-e001-4cab-b4d9-ff0021091df1'
               - column:
                   name: name
@@ -718,7 +718,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'c3d4e5f6-g7h8-9i0j-k1l2-m3n4o5p6q7r'
               - column:
                   name: name
@@ -734,7 +734,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'v3b2n1m4-k5j6-l7h8-g9f0-d1s2a3q4w5e6'
               - column:
                   name: name
@@ -750,7 +750,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'f3g4h5i6-j7k8-l9m0-n1o2-p3q4r5s6t7u8'
               - column:
                   name: name
@@ -767,7 +767,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'g4h5i6j7-k8l9-m0n1-o2p3-q4r5s6t7u8v9'
               - column:
                   name: name
@@ -784,7 +784,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: '1eae7181-61cf-4050-85b1-67a4efd3df3a'
               - column:
                   name: name
@@ -801,7 +801,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'b8c9d0e1-f2g3-h4i5-j6k7-l8m9n0o1p2q3'
               - column:
                   name: name
@@ -818,7 +818,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'w4x3y2z1-a9b8-c7d6-e5f4-g3h2i1j0k9l8'
               - column:
                   name: name
@@ -835,7 +835,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd1e2f3g4-h5i6-j7k8-l9m0-n1o2p3q4r5s6'
               - column:
                   name: name
@@ -852,7 +852,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'y8x7c6v5-b4n3-m2l1-k0j9-i8h7g6f5d4s3'
               - column:
                   name: name
@@ -869,7 +869,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'b1c2d3e4-f5g6-h7i8-j9k0-l1m2n3o4p5q6'
               - column:
                   name: name
@@ -886,7 +886,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'h3i4j5k6-l7m8-n9o0-p1q2-r3s4t5u6v7w'
               - column:
                   name: name
@@ -903,7 +903,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'j3k2l1m0-n9o8-p7q6-r5s4-t3u2v1w0x9y8'
               - column:
                   name: name
@@ -920,7 +920,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'h1i2j3k4-l5m6-n7o8-p9q0-r1s2t3u4v5w6'
               - column:
                   name: name
@@ -937,7 +937,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'c1d2e3f4-g5h6-i7j8-k9l0-m1n2o3p4q5r6'
               - column:
                   name: name
@@ -954,7 +954,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd7e8f9g0-h1i2-j3k4-l5m6-n7o8p9q0r1s2'
               - column:
                   name: name
@@ -971,7 +971,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'e8f9g0h1-i2j3-k4l5-m6n7-o8p9q0r1s2t3'
               - column:
                   name: name
@@ -989,7 +989,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'f9g0h1i2-j3k4-l5m6-n7o8-p9q0r1s2t3u4'
               - column:
                   name: name
@@ -1006,7 +1006,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'g0h1i2j3-k4l5-m6n7-o8p9-q0r1s2t3u4v5'
               - column:
                   name: name
@@ -1023,7 +1023,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'u5v6w7x8-y9z0-a1b2-c3d4-e5f6g7h8i9j0'
               - column:
                   name: name
@@ -1040,7 +1040,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'k7l8m9n0-p1q2-r3s4-t5u6-v7w8x9y0z1a2'
               - column:
                   name: name
@@ -1057,7 +1057,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'm9n0o1p2-q3r4-s5t6-u7v8-w9x0y1z2a3b'
               - column:
                   name: name
@@ -1074,7 +1074,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'a8b9c0d1-e2f3-g4h5-i6j7-k8l9m0n1o2p3'
               - column:
                   name: name
@@ -1091,7 +1091,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'b2c3d4e5-f6g7-8h9i-0j1k-l2m3n4o5p6q7'
               - column:
                   name: name
@@ -1108,7 +1108,7 @@ databaseChangeLog:
             tableName: actor
             columns:
               - column:
-                  name: actor_id
+                  name: id
                   value: 'd9e8f7g6-h5i4-j3k2-l1m0-n9o8p7q6r5s4'
               - column:
                   name: name
