--- a/api/src/main/resources/db/changelog/data/06-production-company.yaml
+++ b/api/src/main/resources/db/changelog/data/06-production-company.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'b4f52740-3e78-41a5-80d3-9351d7f2b691'
               - column:
                   name: name
@@ -18,7 +18,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '9eaf9a8e-8b87-4e1c-a5d6-5c9b3d0b798b'
               - column:
                   name: name
@@ -28,7 +28,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'c894946e-20b1-441d-b9c9-7bf5a0feadd8'
               - column:
                   name: name
@@ -38,7 +38,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '4130511e-03b8-4d79-bbbb-adc31242578c'
               - column:
                   name: name
@@ -48,7 +48,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'ec47044b-d20e-4353-a0d7-baa89fa4ae59'
               - column:
                   name: name
@@ -58,7 +58,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'f6a5e8a4-d81b-4f37-9732-68d67b9b587e'
               - column:
                   name: name
@@ -68,7 +68,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'a1b2c3d4-e5f6-7890-abcd-ef1234567890'
               - column:
                   name: name
@@ -78,7 +78,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '12345678-9abc-def0-1234-56789abcdef0'
               - column:
                   name: name
@@ -88,7 +88,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'a5fdfb8b-5f62-4e94-82ee-f8cfdbfa7d3b'
               - column:
                   name: name
@@ -98,7 +98,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '1fbe81a5-5c1a-43c7-b7d2-4b9e6c2e89f3'
               - column:
                   name: name
@@ -108,7 +108,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '2c7b9d64-d84e-4c68-810d-b25b9646f49d'
               - column:
                   name: name
@@ -118,7 +118,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'c4a36e8d-74d4-4e73-bf8e-2d6f8edcc2c7'
               - column:
                   name: name
@@ -128,7 +128,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'db1a7f0a-2c8e-42a2-8d5a-5f6fef3ab16b'
               - column:
                   name: name
@@ -138,7 +138,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '8d3a6f56-8e34-4d8a-ae5d-39f453c64f91'
               - column:
                   name: name
@@ -148,7 +148,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'e9d03d9c-c1e4-4b87-89de-7c9e6e9b6f13'
               - column:
                   name: name
@@ -158,7 +158,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '19a7c5e4-d123-45f9-8f6d-0f6e1f0b4a1c'
               - column:
                   name: name
@@ -168,7 +168,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'c81fbb6d-5eec-4e9a-8b9f-88a3e2d5d8c1'
               - column:
                   name: name
@@ -178,7 +178,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '4b5d3f6b-b4c1-4e26-9b1b-7d0c3e8b5d54'
               - column:
                   name: name
@@ -188,7 +188,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '5f8e6ed7-aadc-4e54-9e6b-002a00e6babd'
               - column:
                   name: name
@@ -198,7 +198,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'b367c3d4-2a86-4e73-925c-a6b9570c3bb8'
               - column:
                   name: name
@@ -208,7 +208,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: '5faf7ec1-5dc1-4d48-96c8-252e6a1a1b46'
               - column:
                   name: name
@@ -218,7 +218,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'a768273e-f4a4-448a-a5aa-23ac57774593'
               - column:
                   name: name
@@ -228,7 +228,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'b531d2b8-f7d9-4466-82ab-a4a8241b9998'
               - column:
                   name: name
@@ -238,7 +238,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'd2e3f4g5-h6i7-j8k9-l0m1-n2o3p4q5r6s'
               - column:
                   name: name
@@ -248,7 +248,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'a7b8c9d0-e1f2-g3h4-i5j6-k7l8m9n0o1p2'
               - column:
                   name: name
@@ -258,7 +258,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'c3d4e5f6-7g8h-9i0j-k1l2-m3n4o5p6q7r8'
               - column:
                   name: name
@@ -268,7 +268,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'e4f5g6h7-i8j9-k0l1-m2n3-o4p5q6r7s8t9'
               - column:
                   name: name
@@ -278,7 +278,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   value: 'd4e5f6g7-h8i9-j0k1-l2m3-n4o5p6q7r8s9'
               - column:
                   name: name
