--- a/api/src/main/resources/db/changelog/tables/genre.yaml
+++ b/api/src/main/resources/db/changelog/tables/genre.yaml
@@ -7,7 +7,7 @@ databaseChangeLog:
             tableName: genre
             columns:
               - column:
-                  name: genre_id
+                  name: id
                   type: varchar(255)
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
