--- a/api/src/main/resources/db/changelog/tables/production-company.yaml
+++ b/api/src/main/resources/db/changelog/tables/production-company.yaml
@@ -7,7 +7,7 @@ databaseChangeLog:
             tableName: production_company
             columns:
               - column:
-                  name: company_id
+                  name: id
                   type: varchar(255)
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
