add Comments table, make Gender as an enum

--- a/api/src/main/resources/db/changelog/keys/foreign-keys.yaml
+++ b/api/src/main/resources/db/changelog/keys/foreign-keys.yaml
@@ -12,6 +12,13 @@ databaseChangeLog:
             referencedColumnNames: id
 
         - addForeignKeyConstraint:
+            baseTableName: comment
+            baseColumnNames: movie_id
+            constraintName: fk_movie
+            referencedTableName: movie
+            referencedColumnNames: id
+
+        - addForeignKeyConstraint:
             baseTableName: movie_country
             baseColumnNames: movie_id
             constraintName: fk_movie
